# GPU-Programming

./: .gitignore  README.md
assignment01/: generateMatrices.py  task01.md
assignment01/data/: input.txt  output.txt
assignment01/include/: file.h  utils.h
assignment01/src/: file.cpp  utils.cpp
assignment01/task02/: Makefile  compute.cpp  compute.h  file.cpp  file.h  main.cpp  utils.cpp  utils.h
assignment01/task02/data/: input.txt  output.txt
assignment01/task03/: Makefile  compute.cu  compute.cuh  main.cu
assignment02/: generateMatrices.py
assignment02/data/: input.txt
assignment02/include/: file.h  matrix.h  utils.h
assignment02/src/: CMakeLists.txt  file.cpp  matrix.cpp  utils.cpp
assignment02/task01/: checkProperties.cu
assignment02/task02/: CMakeLists.txt  compute.cpp  compute.h  main.cpp
assignment02/task03/: CMakeLists.txt  checkProperties.cu  compute.cu  compute.h  main.cu
assignment02/task05/: CMakeLists.txt  compute.cu  main.cu
